# zeroclaw-reference-plugin

./: Cargo.toml  README.md  manifest.toml
src/: lib.rs  redact.rs
tests/: redact.rs
