[package]
name = "zeroclaw-reference-plugin"
version = "0.1.0"
edition = "2021"
description = "Canonical reference ZeroClaw WASM tool plugin: a config-driven redact tool implementing the wit/v0 tool-plugin world"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
